--- a/index.html
+++ b/index.html
@@ -199,16 +199,19 @@
         </div>
     </section>
 
+        <div class="line"></div>
+
+    
     <section id="about" class="about">
         <h2>About Me</h2>
         <div class="quote-section">
             <p>"Take a chance; you’ve got nothing to lose." – Steve Jobs</p>
         </div>
         <div class="summary-section">
-            <p>I’m a data-driven problem solver passionate about using analytics and innovation to make a real impact. With over two years of experience as a Data Conversion Consultant/ETL Engineer/Solutions Architect at ADP, I specialize in turning complex data into seamless, actionable solutions.</p>
+            <p>I’m a data-driven problem solver passionate about using analytics and innovation to make a real impact. With over two years of experience in Data Analysis, Data Conversion, ETL, and Solution Architecture at ADP, I specialize in turning complex data into seamless, actionable solutions.</p>
             <ul>
                 <li>Led 7+ high-impact projects, contributing $3M in revenue and $500K+ in annual recurring income.</li>
-                <li>Excelled in SQL and Altair Monarch, developing reusable workflows and scripts for efficient data extraction.</li>
+                <li>Excelled in Advanced SQL and Altair Monarch, developing reusable workflows and scripts for efficient data extraction.</li>
                 <li>Built automated processes using Power Apps, Power Automate, and Power BI to enhance efficiency.</li>
             </ul>
             <p>Outside of work, I’m a Toastmasters enthusiast and served as Vice President of Public Relations for ADP Hyderabad Toastmasters.</p>
@@ -232,8 +235,6 @@
 
     <section id="contact" class="contact">
         <h2>Work Together?</h2>
-        <p>If you’re looking for a passionate data professional, let's connect.</p>
-        <div class="line"></div>
         <h2>Get in Touch</h2>
         <p>Email: <a href="mailto:anwarmahammad@hotmail.com">anwarmahammad@hotmail.com</a></p>
         <p>Phone: +123 456 7890</p>
