--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         <p>and, I'm open for</p>
         <h2>Data Scientist / Data Analyst Roles</h2>
         <div class="btn-container">
-            <a href="#">Download Resume</a>
+            <a href="https://1drv.ms/b/c/cb12a9a5f91f0ac7/EX6idJUs4JJEmEObVdXBV-cB7sRgVshW9wsfnjGYQGXXHQ?e=o1sAAO">Download Resume</a>
             <a href="#contact">Contact Info</a>
         </div>
     </section>
