--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         <p>and, I'm open for</p>
         <h2>Data Scientist / Data Analyst Roles</h2>
         <div class="btn-container">
-            <a href="https://1drv.ms/b/c/cb12a9a5f91f0ac7/EX6idJUs4JJEmEObVdXBV-cB7sRgVshW9wsfnjGYQGXXHQ?e=o1sAAO">Download Resume</a>
+            <a href="https://1drv.ms/b/c/cb12a9a5f91f0ac7/EX6idJUs4JJEmEObVdXBV-cB7sRgVshW9wsfnjGYQGXXHQ?e=o1sAAO" target="_blank">Download Resume</a>
             <a href="#contact">Contact Info</a>
         </div>
     </section>
@@ -258,7 +258,7 @@
         <h3 style="color: #666;">Work Together?</h3>
         <h2 class="contact-gap">Get in Touch</h2>
         <p>Email: <a href="mailto:anwarmahammad@hotmail.com">anwarmahammad@hotmail.com</a></p>
-        <p>Phone: +123 456 7890</p>
+        <p>Phone: +91 9440672016</p>
         <div class="social-links">
             <a href="https://www.linkedin.com/in/ianvrr" target="_blank">LinkedIn</a>
             <a href="https://github.com/ianvrr" target="_blank">GitHub</a>
