--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       font-family: 'Manrope', sans-serif;
       background: #f9f9f9;
       color: #212121;
+      margin: 0;
+      padding: 0;
     }
     header {
       position: fixed; top: 0; left: 0; right: 0;
@@ -35,143 +37,228 @@
 
     main {
       margin-top: 64px;
-      max-width: 1200px;
+      max-width: 1024px;
       margin-left: auto;
       margin-right: auto;
-      padding: 0 1.3rem 3.5rem;
+      padding: 0 1.5rem 4.5rem;
       display: grid;
-      gap: 2.7rem;
+      gap: 2.8rem;
     }
 
     .dashboard-row {
       display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 2.6rem;
-      align-items: stretch;
-      margin-bottom: 0.3rem;
+      grid-template-columns: 1.45fr 1fr;
+      gap: 2.8rem;
+      align-items: start;
     }
-    @media (max-width: 1100px) { .dashboard-row { grid-template-columns: 1fr;} }
+    @media (max-width: 900px) {
+      main, .dashboard-panel {padding: 0.85rem 0.5rem;}
+      .dashboard-row {grid-template-columns:1fr;}
+    }
 
     .dashboard-panel {
       background: #fff;
       border-radius: 1.25rem;
       box-shadow: 0 4px 18px rgba(208,2,27,0.10);
-      padding: 2.1rem 2.2rem;
+      padding: 2.3rem 2.4rem;
       min-height: 250px;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: start;
     }
     .dashboard-panel h2,
     .dashboard-panel h3 {
       color: #d0021b;
       font-weight: 900;
-      font-size: 1.6rem;
-      margin-bottom: 1.07rem;
-      letter-spacing: 0.03em;
+      font-size: 1.75rem;
+      margin-bottom: 1.1rem;
+      letter-spacing: 0.04em;
     }
     .dashboard-panel .panel-subtitle {
       color: #333;
       line-height: 1.7;
-      font-size: 1.15rem;
+      font-size: 1.18rem;
     }
 
     /* Welcome Panel */
     .welcome { text-align: left; }
     .welcome h1 {
       color: #d0021b;
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
+      font-size: 3.25rem;
+      margin-bottom: 0.75rem;
       font-weight: 900;
-      letter-spacing: .03em;
+      letter-spacing: .04em;
+      line-height: 1.1;
     }
-    .welcome .btn-group { margin-top:1.1rem; display:flex; gap:1rem;}
+    .welcome .btn-group { margin-top:1.7rem; display:flex; gap:1.3rem;}
     .btn {
-      padding: 0.68rem 1.85rem;
-      border-radius: 25px;
-      font-size: 1.08rem; font-weight: 700; text-decoration: none;
+      padding: 0.8rem 2rem;
+      border-radius: 30px;
+      font-size: 1.15rem; font-weight: 700; text-decoration: none;
       background: #d0021b; color: #fff; border:none; cursor:pointer;
       transition: background .23s;
       display:inline-block;
     }
     .btn:hover, .btn:focus { background:#b40015; color:#fff; outline:none;}
 
-    /* Timeline */
+    /* Skills Panel */
+    .skills-panel {
+      min-width: 320px;
+    }
+    .skills-panel .skills-chart-wrapper {
+      padding: 1.4rem 1.1rem 0.8rem 1.1rem;
+      background: #fff7f7; border-radius: 1.2rem;
+      box-shadow: 0 2px 9px #d0021b27;
+    }
+    canvas {
+      width: 100% !important;
+      height: 350px !important;
+    }
+
+    /* About and Experience panels */
+    #about p, #experience .timeline-content p {
+      font-size: 1.1rem;
+      color: #444;
+    }
     .timeline {
-      margin-left: 0.4rem; margin-top: 1.2rem; position:relative;
+      margin-left: 0.45rem;
+      margin-top: 1.2rem;
+      position: relative;
     }
     .timeline-item {
-      position: relative; display: flex; align-items:flex-start; margin-bottom: 2.8rem;
+      position: relative;
+      display: flex;
+      align-items: flex-start;
+      margin-bottom: 2.8rem;
     }
     .timeline-dot {
-      margin-top: 2px; flex-shrink:0;
+      margin-top: 2px;
+      flex-shrink: 0;
       margin-right: 17px;
-      width: 18px; height:18px; border-radius:50%;
+      width: 18px;
+      height: 18px;
+      border-radius: 50%;
       background: #d0021b;
       box-shadow: 0 2px 12px #d0021b65;
       border: 2.5px solid #fff;
-      z-index:2;
+      z-index: 2;
     }
     .timeline-content {
       background: #fff7f7;
       border-radius: 9px;
       box-shadow: 0 2px 12px #d0021b0e;
       padding: 1rem 1.35rem 1rem 1.2rem;
-      min-width: 160px; max-width: 370px;
+      min-width: 160px;
+      max-width: 380px;
     }
-    .timeline-content h4 { color:#d0021b; font-weight: 800; font-size: 1.12rem;}
-    .timeline-content .timeline-year {font-weight:700; color:#333;}
-    .timeline-content p {color:#555; font-size:1.07rem;}
-    .timeline-connector {
-      width: 5px; background:#d0021b; min-height: 38px;
-      margin: 0 6.5px; border-radius:4px;
-      position: absolute; left: 6.5px; top:20px; z-index:0;
+    .timeline-content h4 {
+      color: #d0021b;
+      font-weight: 800;
+      font-size: 1.15rem;
     }
-    /* Radar Skills Panel */
-    .skills-panel { min-width: 320px; }
-    .skills-panel .skills-chart-wrapper {
-      padding: 1.3rem 1rem 0.7rem 1rem;
-      background: #fff7f7; border-radius: 1.1rem;
-      box-shadow: 0 2px 9px #d0021b27;
+    .timeline-content .timeline-year {
+      font-weight: 700;
+      color: #333;
+      margin-bottom: 0.2rem;
     }
-    canvas { width: 100% !important; height: 400px !important;}
+
     /* Projects Panel */
-    .projects-grid { display:flex; gap:1.6rem; margin-top:0.2rem; flex-wrap:wrap;}
+    .projects-grid {
+      display: flex;
+      gap: 1.7rem;
+      margin-top: 0.3rem;
+      flex-wrap: wrap;
+    }
     .project-card {
       background: #fff7f7;
-      border-radius: 1.17rem;
-      box-shadow: 0 2px 9px rgba(208,2,27,0.11);
-      padding: 1.43rem 1.10rem;
-      min-width: 230px; max-width: 310px;
-      flex:1 1 220px; transition: box-shadow 0.2s, transform 0.2s;
+      border-radius: 1.2rem;
+      box-shadow: 0 2px 9px rgba(208, 2, 27, 0.11);
+      padding: 1.55rem 1.25rem;
+      min-width: 235px;
+      max-width: 320px;
+      flex: 1 1 220px;
+      transition: box-shadow 0.2s, transform 0.2s;
       position: relative;
     }
     .project-card:hover, .project-card:focus-visible {
-      box-shadow: 0 7px 33px #d0021b49;
-      transform:translateY(-4px) scale(1.04); z-index: 10;
+      box-shadow: 0 8px 35px #d0021b55;
+      transform: translateY(-5px) scale(1.06);
+      z-index: 10;
       outline: none;
     }
     .project-card h3 {
-      color: #d0021b; font-size: 1.09rem; font-weight: 800; margin-bottom:.22rem;
+      color: #d0021b;
+      font-size: 1.12rem;
+      font-weight: 900;
+      margin-bottom: 0.3rem;
     }
-    .project-card p {color:#444;}
+    .project-card p {
+      color: #444;
+      font-size: 1rem;
+    }
 
-    /* Contact */
-    #contact { padding: 2.4rem 1.3rem; border-radius:1.35rem; background:#fff; box-shadow:0 1px 16px #d0021b15;}
-    #contact h2 { color: #d0021b; font-weight:900; margin-bottom:1rem; font-size:2.3rem;}
-    #contact p {font-size: 1.1rem; margin: 0.51rem 0; color: #2a2a2a;}
-    #contact a {color:#d0021b; font-weight:700; text-decoration:none; transition:0.19s;}
-    #contact a:hover, #contact a:focus {color:#aa001a;text-decoration:underline;outline:none;}
-    .social-links {margin-top: 1.2rem;}
-    .social-links a {color:#d0021b; margin:0 7px; font-size:2.1rem;transition:.2s;}
-    .social-links a:hover, .social-links a:focus {color:#222;}
-    footer {background:#d0021b;text-align:center;padding:1rem 0;color:#fff;font-weight:700;letter-spacing:.03em;margin-top:3.6rem;}
-    @media (max-width: 900px) {
-      main, .dashboard-panel {padding: 0.85rem 0.5rem;}
-      .dashboard-row {grid-template-columns:1fr;}
-      .projects-grid {flex-direction:column;}
-      .project-card{max-width:99%;}
-      .skills-panel{max-width:100%;}
+    /* Contact Panel */
+    #contact {
+      padding: 3.6rem 1.8rem;
+      border-radius: 1.5rem;
+      background: #fff;
+      box-shadow: 0 1px 18px #d0021b18;
+      max-width: 680px;
+      margin: 0 auto 2.2rem;
+      text-align: center;
+    }
+    #contact h2 {
+      color: #d0021b;
+      font-weight: 900;
+      margin-bottom: 1.35rem;
+      font-size: 2.9rem;
+      line-height: 1.1;
+      font-family: 'Manrope', sans-serif;
+      letter-spacing: 0.06em;
+    }
+    #contact p {
+      font-size: 1.24rem;
+      margin: 0.65rem 0;
+      color: #2a2a2a;
+    }
+    #contact a {
+      color: #d0021b;
+      font-weight: 700;
+      text-decoration: none;
+      transition: 0.19s;
+    }
+    #contact a:hover,
+    #contact a:focus {
+      color: #aa001a;
+      text-decoration: underline;
+      outline: none;
+    }
+    .social-links {
+      margin-top: 1.9rem;
+      font-size: 1.15rem;
+      font-weight: 700;
+    }
+    .social-links a {
+      color: #d0021b;
+      margin: 0 14px;
+      font-size: 1.95rem;
+      transition: 0.3s;
+      display: inline-block;
+      vertical-align: middle;
+    }
+    .social-links a:hover,
+    .social-links a:focus {
+      color: #222;
+    }
+
+    footer {
+      background: #d0021b;
+      text-align: center;
+      padding: 1.1rem 0;
+      color: #fff;
+      font-weight: 700;
+      letter-spacing: 0.04em;
+      margin-top: 3.9rem;
     }
   </style>
 </head>
@@ -188,7 +275,6 @@
   </nav>
 </header>
 <main>
-
   <div class="dashboard-row">
     <section id="welcome" tabindex="0" class="dashboard-panel welcome">
       <h1>Hello, I'm Anwar MD</h1>
@@ -257,15 +343,14 @@
     </div>
   </section>
 
-  <section id="contact" tabindex="0" class="dashboard-panel" style="max-width:620px; margin:auto;">
+  <section id="contact" tabindex="0" class="dashboard-panel">
     <h2>Let's Work Together</h2>
-    <p>Email: <a href="mailto:anwarmahammad@hotmail.com">anwarmahammad@hotmail.com</a></p>
-    <p>Phone: <a href="tel:+919440672016">+91 94406 72016</a></p>
+    <p>Email: <a href="mailto:anwarmahammad@hotmail.com">anwarmahammad@hotmail.com</a> | Phone: <a href="tel:+919440672016">+91 94406 72016</a></p>
     <div class="social-links">
-      <a href="https://linkedin.com/in/ianvrr" aria-label="LinkedIn" target="_blank" rel="noopener"><svg width="30" height="30" fill="#d0021b" viewBox="0 0 24 24"><path d="M21 0h-18c-1.657 0-3 1.343-3 3v18c0 1.657 1.343 3 3 3h18c1.657 0 3-1.343 3-3v-18c0-1.657-1.343-3-3-3zm-12 20h-3v-10h3v10zm-1.5-11.268c-.965 0-1.75-.784-1.75-1.75s.785-1.75 1.75-1.75c.965 0 1.75.784 1.75 1.75s-.785 1.75-1.75 1.75zm13.5 11.268h-3v-5.604c0-1.336-.471-2.25-1.662-2.25-1.03 0-1.662.786-1.662 2.25v5.604h-3v-10h3v1.428c.522-.728 1.577-1.428 2.496-1.428 2.255 0 3.583 1.704 3.583 4.615v5.385z"></path></svg></a>
-      <a href="https://github.com/ianvrr" aria-label="GitHub" target="_blank" rel="noopener"><svg width="30" height="30" fill="#d0021b" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12 0 5.303 3.438 9.8 8.207 11.385.599.111.82-.26.82-.577 0-.284-.01-1.04-.015-2.042-3.338.724-4.042-1.61-4.042-1.61-1.01-2.611-1.62-3.188-1.62-3.188-1.33-.916.103-.897.103-.897 1.47.103 2.247 1.5 2.247 1.5 1.22 2.06 3.2 1.466 3.978 1.12.123-.866.48-1.466.873-1.804-2.664-.3-5.464-1.33-5.464-5.931 0-1.31.47-2.38 1.234-3.22-.124-.302-.536-1.513.117-3.158 0 0 1.01-.322 3.303 1.236 1.01-.283 2.1-.42 3.18-.414 1.078.006 2.16.143 3.178.42 2.29-1.56 3.298-1.237 3.298-1.237.654 1.655.24 2.87.117 3.156.767.84 1.234 1.907 1.234 3.22 0 4.602-2.802 5.62-5.472 5.92.48.416.91 1.237.91 2.497 0 1.806-.018 3.263-.018 3.703 0 .32.217.694.823.57C20.565 21.793 24 17.297 24 12c0-6.627-5.373-12-12-12z"></path></svg></a>
-      <a href="https://hackerrank.com/ianvrr" aria-label="Hackerrank" target="_blank" rel="noopener"><svg width="30" height="30" fill="#d0021b" viewBox="0 0 24 24"><path d="M20.584 17.235c-.003 0-.004 0-.006 0L13.032 21.54a.996.996 0 0 1-.99 0L4.59 17.235a.99.99 0 0 1-.495-.855V6.6a.99.99 0 0 1 .495-.854l7.451-4.607a.996.996 0 0 1 .996 0L20.59 5.75a.997.997 0 0 1 .994.006.99.99 0 0 1 .494.853v9.782a.991.991 0 0 1-.494.844zm-8.403-7.788 1.816-1.07 1.816 1.07V6.654a6.599 6.599 0 0 1 .75 1.537 2.497 2.497 0 0 1-.75 3.027v-1.546l-1.816 1.07-1.816-1.07v1.542a2.52 2.52 0 0 1-.75-3.027 7.014 7.014 0 0 1 .75-1.533zm-3.472 2.807A3.517 3.517 0 0 0 6 12a3.52 3.52 0 0 0 2.72 3.31 3.52 3.52 0 0 0 3.54-1.08v-.002A3.52 3.52 0 0 0 12 12a3.52 3.52 0 0 0-3.36-2.802z"></path></svg></a>
-      <a href="https://leetcode.com/ianvrr" aria-label="Leetcode" target="_blank" rel="noopener"><svg width="30" height="30" fill="#d0021b" viewBox="0 0 24 24"><path d="M20.367 3.558c-3.86-3.865-10.133-3.868-13.992 0s-3.866 10.132 0 13.989 10.134 3.87 13.993 0c3.858-3.867 3.86-10.16-.001-13.989zm-1.845 12.204a8.056 8.056 0 0 1-5.16 2.044v-1.99a6.06 6.06 0 0 0 3.5-1.518c.266-.255.378-.653.254-1.018a.808.808 0 0 0-.686-.55c-.172-.03-.356.02-.5.145a4.56 4.56 0 0 1-2.37.94c-2.04.208-3.928-1.172-4.38-3.265-.365-1.759.63-3.495 2.322-4.061 1.56-.512 3.37.15 4.374 1.526.106.14.245.23.4.27a.793.793 0 0 0 .63-.16c.357-.286.432-.785.18-1.173a6.053 6.053 0 0 0-3.66-2.11v-2.15a8.067 8.067 0 0 1 7.09 7.09c0 1.444-.34 2.792-.97 4.005z"></path></svg></a>
+      <a href="https://linkedin.com/in/ianvrr" aria-label="LinkedIn" target="_blank" rel="noopener"><svg width="36" height="36" fill="#d0021b" viewBox="0 0 24 24"><path d="M21 0h-18c-1.657 0-3 1.343-3 3v18c0 1.657 1.343 3 3 3h18c1.657 0 3-1.343 3-3v-18c0-1.657-1.343-3-3-3zm-12 20h-3v-10h3v10zm-1.5-11.268c-.965 0-1.75-.784-1.75-1.75s.785-1.75 1.75-1.75c.965 0 1.75.784 1.75 1.75s-.785 1.75-1.75 1.75zm13.5 11.268h-3v-5.604c0-1.336-.471-2.25-1.662-2.25-1.03 0-1.662.786-1.662 2.25v5.604h-3v-10h3v1.428c.522-.728 1.577-1.428 2.496-1.428 2.255 0 3.583 1.704 3.583 4.615v5.385z"></path></svg></a>
+      <a href="https://github.com/ianvrr" aria-label="GitHub" target="_blank" rel="noopener"><svg width="36" height="36" fill="#d0021b" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12 0 5.303 3.438 9.8 8.207 11.385.599.111.82-.26.82-.577 0-.284-.01-1.04-.015-2.042-3.338.724-4.042-1.61-4.042-1.61-1.01-2.611-1.62-3.188-1.62-3.188-1.33-.916.103-.897.103-.897 1.47.103 2.247 1.5 2.247 1.5 1.22 2.06 3.2 1.466 3.978 1.12.123-.866.48-1.466.873-1.804-2.664-.3-5.464-1.33-5.464-5.931 0-1.31.47-2.38 1.234-3.22-.124-.302-.536-1.513.117-3.158 0 0 1.01-.322 3.303 1.236 1.01-.283 2.1-.42 3.18-.414 1.078.006 2.16.143 3.178.42 2.29-1.56 3.298-1.237 3.298-1.237.654 1.655.24 2.87.117 3.156.767.84 1.234 1.907 1.234 3.22 0 4.602-2.802 5.62-5.472 5.92.48.416.91 1.237.91 2.497 0 1.806-.018 3.263-.018 3.703 0 .32.217.694.823.57C20.565 21.793 24 17.297 24 12c0-6.627-5.373-12-12-12z"></path></svg></a>
+      <a href="https://hackerrank.com/ianvrr" aria-label="Hackerrank" target="_blank" rel="noopener"><svg width="36" height="36" fill="#d0021b" viewBox="0 0 24 24"><path d="M20.584 17.235c-.003 0-.004 0-.006 0L13.032 21.54a.996.996 0 0 1-.99 0L4.59 17.235a.99.99 0 0 1-.495-.855V6.6a.99.99 0 0 1 .495-.854l7.451-4.607a.996.996 0 0 1 .996 0L20.59 5.75a.997.997 0 0 1 .994.006.99.99 0 0 1 .494.853v9.782a.991.991 0 0 1-.494.844zm-8.403-7.788 1.816-1.07 1.816 1.07V6.654a6.599 6.599 0 0 1 .75 1.537 2.497 2.497 0 0 1-.75 3.027v-1.546l-1.816 1.07-1.816-1.07v1.542a2.52 2.52 0 0 1-.75-3.027 7.014 7.014 0 0 1 .75-1.533zm-3.472 2.807A3.517 3.517 0 0 0 6 12a3.52 3.52 0 0 0 2.72 3.31 3.52 3.52 0 0 0 3.54-1.08v-.002A3.52 3.52 0 0 0 12 12a3.52 3.52 0 0 0-3.36-2.802z"></path></svg></a>
+      <a href="https://leetcode.com/ianvrr" aria-label="Leetcode" target="_blank" rel="noopener"><svg width="36" height="36" fill="#d0021b" viewBox="0 0 24 24"><path d="M20.367 3.558c-3.86-3.865-10.133-3.868-13.992 0s-3.866 10.132 0 13.989 10.134 3.87 13.993 0c3.858-3.867 3.86-10.16-.001-13.989zm-1.845 12.204a8.056 8.056 0 0 1-5.16 2.044v-1.99a6.06 6.06 0 0 0 3.5-1.518c.266-.255.378-.653.254-1.018a.808.808 0 0 0-.686-.55c-.172-.03-.356.02-.5.145a4.56 4.56 0 0 1-2.37.94c-2.04.208-3.928-1.172-4.38-3.265-.365-1.759.63-3.495 2.322-4.061 1.56-.512 3.37.15 4.374 1.526.106.14.245.23.4.27a.793.793 0 0 0 .63-.16c.357-.286.432-.785.18-1.173a6.053 6.053 0 0 0-3.66-2.11v-2.15a8.067 8.067 0 0 1 7.09 7.09c0 1.444-.34 2.792-.97 4.005z"></path></svg></a>
     </div>
   </section>
 </main>
@@ -304,7 +389,12 @@
     new Chart(ctx, {
       type: 'radar',
       data: {
-        labels:['SQL','Python','AWS Redshift','AWS Glue','AWS Athena','AWS SageMaker','AWS QuickSight','Boto3','ETL/ELT','PostgreSQL','AWS DMS','ElastiCache','Power BI','Looker Studio','Jira & Confluence'],
+        labels:[
+          'SQL', 'Python', 'AWS Redshift', 'AWS Glue', 'AWS Athena',
+          'AWS SageMaker', 'AWS QuickSight', 'Boto3', 'ETL/ELT',
+          'PostgreSQL', 'AWS DMS', 'ElastiCache', 'Power BI', 'Looker Studio',
+          'Jira & Confluence'
+        ],
         datasets:[{
           label:'Skill Level %',
           data: [90,85,80,75,70,65,80,70,85,80,70,60,70,65,75],
