--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       color: #212121;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
     }
     header {
       position: fixed; top: 0; left: 0; right: 0;
@@ -23,8 +24,9 @@
       display: flex;
       align-items: center;
       user-select: none;
+      width: 100%;
     }
-    header h1 { color: #d0021b; font-weight: 900; font-size: 1.65rem; flex: 1; }
+    header h1 { color: #d0021b; font-weight: 900; font-size: 1.65rem; flex: 1; margin:0;}
     nav { display: flex; gap: 1.5rem;}
     nav button {
       background: none; border: none; color: #212121;
@@ -36,229 +38,209 @@
     }
 
     main {
-      margin-top: 64px;
-      max-width: 1024px;
+      margin-top: 85px;
+      max-width: 1120px;
       margin-left: auto;
       margin-right: auto;
       padding: 0 1.5rem 4.5rem;
-      display: grid;
+      display: flex;
+      flex-direction: column;
       gap: 2.8rem;
+      min-height: 100vh;
     }
 
     .dashboard-row {
       display: grid;
-      grid-template-columns: 1.45fr 1fr;
-      gap: 2.8rem;
-      align-items: start;
+      grid-template-columns: 1.3fr 1fr;
+      gap: 2.3rem;
+      align-items: stretch;
     }
-    @media (max-width: 900px) {
-      main, .dashboard-panel {padding: 0.85rem 0.5rem;}
-      .dashboard-row {grid-template-columns:1fr;}
+
+    @media (max-width: 950px) {
+      .dashboard-row { grid-template-columns: 1fr; gap: 2rem;}
+      main { padding: 0 0.2rem 3rem; }
     }
 
     .dashboard-panel {
       background: #fff;
-      border-radius: 1.25rem;
+      border-radius: 1.2rem;
       box-shadow: 0 4px 18px rgba(208,2,27,0.10);
-      padding: 2.3rem 2.4rem;
-      min-height: 250px;
+      padding: 2.1rem 2.2rem;
+      min-height: 220px;
       display: flex;
       flex-direction: column;
-      justify-content: start;
+      justify-content: center;
+      margin-bottom: 0;
+      box-sizing: border-box;
     }
-    .dashboard-panel h2,
-    .dashboard-panel h3 {
+    .dashboard-panel h2, .dashboard-panel h3 {
       color: #d0021b;
       font-weight: 900;
-      font-size: 1.75rem;
-      margin-bottom: 1.1rem;
-      letter-spacing: 0.04em;
+      font-size: 1.45rem;
+      margin-bottom: 1rem;
+      letter-spacing: 0.02em;
     }
     .dashboard-panel .panel-subtitle {
       color: #333;
       line-height: 1.7;
-      font-size: 1.18rem;
+      font-size: 1.13rem;
     }
 
     /* Welcome Panel */
     .welcome { text-align: left; }
     .welcome h1 {
       color: #d0021b;
-      font-size: 3.25rem;
-      margin-bottom: 0.75rem;
+      font-size: 2.5rem;
       font-weight: 900;
-      letter-spacing: .04em;
-      line-height: 1.1;
+      margin-bottom: 0.5rem;
+      letter-spacing: .03em;
     }
-    .welcome .btn-group { margin-top:1.7rem; display:flex; gap:1.3rem;}
+    .welcome .btn-group { margin-top:1.1rem; display:flex; gap:1rem;}
     .btn {
-      padding: 0.8rem 2rem;
-      border-radius: 30px;
-      font-size: 1.15rem; font-weight: 700; text-decoration: none;
+      padding: 0.68rem 1.85rem;
+      border-radius: 25px;
+      font-size: 1.08rem; font-weight: 700; text-decoration: none;
       background: #d0021b; color: #fff; border:none; cursor:pointer;
       transition: background .23s;
       display:inline-block;
     }
     .btn:hover, .btn:focus { background:#b40015; color:#fff; outline:none;}
 
-    /* Skills Panel */
-    .skills-panel {
-      min-width: 320px;
-    }
+    /* Radar/Skills Panel */
+    .skills-panel { min-width: 300px;}
     .skills-panel .skills-chart-wrapper {
-      padding: 1.4rem 1.1rem 0.8rem 1.1rem;
-      background: #fff7f7; border-radius: 1.2rem;
+      padding: 1.25rem 0.5rem 1rem 0.5rem;
+      background: #fff7f7; border-radius: 1rem;
       box-shadow: 0 2px 9px #d0021b27;
     }
-    canvas {
-      width: 100% !important;
-      height: 350px !important;
-    }
+    canvas { width: 100% !important; height: 340px !important;}
 
-    /* About and Experience panels */
+    /* About & Experience */
     #about p, #experience .timeline-content p {
-      font-size: 1.1rem;
-      color: #444;
+      font-size: 1.08rem; color: #444;
     }
-    .timeline {
-      margin-left: 0.45rem;
-      margin-top: 1.2rem;
-      position: relative;
-    }
+    .timeline { margin-left: 0.4rem; margin-top: 1.0rem; position:relative;}
     .timeline-item {
-      position: relative;
-      display: flex;
-      align-items: flex-start;
-      margin-bottom: 2.8rem;
+      position: relative; display: flex; align-items:flex-start; margin-bottom: 2.30rem;
     }
     .timeline-dot {
-      margin-top: 2px;
-      flex-shrink: 0;
+      margin-top: 2px; flex-shrink:0;
       margin-right: 17px;
-      width: 18px;
-      height: 18px;
-      border-radius: 50%;
+      width: 16px; height:16px; border-radius:50%;
       background: #d0021b;
       box-shadow: 0 2px 12px #d0021b65;
-      border: 2.5px solid #fff;
-      z-index: 2;
+      border: 2px solid #fff;
+      z-index:2;
     }
     .timeline-content {
       background: #fff7f7;
       border-radius: 9px;
       box-shadow: 0 2px 12px #d0021b0e;
-      padding: 1rem 1.35rem 1rem 1.2rem;
-      min-width: 160px;
-      max-width: 380px;
+      padding: 0.9rem 1.0rem 0.9rem 1.0rem;
+      min-width: 150px;
+      max-width: 340px;
     }
-    .timeline-content h4 {
-      color: #d0021b;
-      font-weight: 800;
-      font-size: 1.15rem;
-    }
-    .timeline-content .timeline-year {
-      font-weight: 700;
-      color: #333;
-      margin-bottom: 0.2rem;
-    }
+    .timeline-content h4 { color:#d0021b; font-weight: 800; font-size: 1.08rem;}
+    .timeline-content .timeline-year {font-weight:700; color:#333;}
+    .timeline-content p {color:#555; font-size:1.07rem;}
 
     /* Projects Panel */
-    .projects-grid {
-      display: flex;
-      gap: 1.7rem;
-      margin-top: 0.3rem;
-      flex-wrap: wrap;
-    }
+    .projects-grid { display:flex; gap:1.4rem; margin-top:0.2rem; flex-wrap:wrap;}
     .project-card {
       background: #fff7f7;
-      border-radius: 1.2rem;
-      box-shadow: 0 2px 9px rgba(208, 2, 27, 0.11);
-      padding: 1.55rem 1.25rem;
-      min-width: 235px;
-      max-width: 320px;
-      flex: 1 1 220px;
-      transition: box-shadow 0.2s, transform 0.2s;
+      border-radius: 1.17rem;
+      box-shadow: 0 2px 9px rgba(208,2,27,0.11);
+      padding: 1.2rem 1.03rem;
+      min-width: 210px; max-width: 305px;
+      flex:1 1 170px; transition: box-shadow 0.2s, transform 0.2s;
       position: relative;
     }
     .project-card:hover, .project-card:focus-visible {
-      box-shadow: 0 8px 35px #d0021b55;
-      transform: translateY(-5px) scale(1.06);
-      z-index: 10;
+      box-shadow: 0 7px 33px #d0021b49;
+      transform:translateY(-4px) scale(1.03); z-index: 10;
       outline: none;
     }
     .project-card h3 {
-      color: #d0021b;
-      font-size: 1.12rem;
-      font-weight: 900;
-      margin-bottom: 0.3rem;
+      color: #d0021b; font-size: 1.04rem; font-weight: 800; margin-bottom:.18rem;
     }
-    .project-card p {
-      color: #444;
-      font-size: 1rem;
-    }
+    .project-card p {color:#444; font-size:0.98rem;}
 
-    /* Contact Panel */
-    #contact {
-      padding: 3.6rem 1.8rem;
-      border-radius: 1.5rem;
+    /* Advanced Collab Section - "Work Together style" */
+    .collab-section {
+      position: relative;
       background: #fff;
-      box-shadow: 0 1px 18px #d0021b18;
-      max-width: 680px;
-      margin: 0 auto 2.2rem;
+      min-height: 285px;
+      margin-top: 3.1rem;
+      margin-bottom: 0;
+      width:100%;
+      border-radius: 1.1rem 1.1rem 0 0;
+      overflow: hidden;
+      box-shadow: 0 2px 16px #d0021b09;
+      z-index: 5;
+    }
+    .collab-bg-text {
+      position: absolute;
+      left: 0; right: 0; top: 18px;
       text-align: center;
+      font-size: 7vw;
+      font-weight: 700;
+      color: #9992;
+      letter-spacing: -0.01em;
+      user-select: none;
+      z-index: 0;
+      pointer-events: none;
+      white-space: nowrap;
     }
-    #contact h2 {
-      color: #d0021b;
+    .collab-main {
+      position: relative;
+      z-index: 1;
+      text-align: center;
+      margin-top: 65px;
+      margin-bottom: 25px;
+    }
+    .collab-main h2 {
+      margin: 0;
+      font-size: 3rem;
+      letter-spacing: -1px;
       font-weight: 900;
-      margin-bottom: 1.35rem;
-      font-size: 2.9rem;
-      line-height: 1.1;
-      font-family: 'Manrope', sans-serif;
-      letter-spacing: 0.06em;
-    }
-    #contact p {
-      font-size: 1.24rem;
-      margin: 0.65rem 0;
-      color: #2a2a2a;
-    }
-    #contact a {
-      color: #d0021b;
-      font-weight: 700;
-      text-decoration: none;
-      transition: 0.19s;
-    }
-    #contact a:hover,
-    #contact a:focus {
-      color: #aa001a;
-      text-decoration: underline;
-      outline: none;
-    }
-    .social-links {
-      margin-top: 1.9rem;
-      font-size: 1.15rem;
-      font-weight: 700;
-    }
-    .social-links a {
-      color: #d0021b;
-      margin: 0 14px;
-      font-size: 1.95rem;
-      transition: 0.3s;
+      color: #212121;
       display: inline-block;
-      vertical-align: middle;
+      background: #fff;
+      padding: 0 0.5rem;
     }
-    .social-links a:hover,
-    .social-links a:focus {
-      color: #222;
+    .collab-main hr {
+      margin: 20px auto 0 auto;
+      width: 40%;
+      border: none;
+      border-top: 5px solid #d0021b35;
+    }
+    .collab-row {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-end;
+      margin: 0 9vw 22px 9vw;
+      font-size: 1.19rem;
+      z-index: 2;
+      position: relative;
+    }
+    .collab-links { text-align: left;}
+    .collab-links a {margin-right: 23px; color: #222; text-decoration: none; font-weight: 500; transition: color 0.2s;}
+    .collab-links a:hover {color: #d0021b; text-decoration: underline;}
+    .collab-contact { text-align:right;}
+    .collab-contact a { color: #212121; text-decoration: none; font-weight: 700; letter-spacing: 0.01em;}
+    .collab-contact a:hover {color:#d0021b; text-decoration: underline;}
+    @media (max-width: 900px) {
+      .dashboard-row { grid-template-columns:1fr; }
+      .collab-section {min-height:220px;}
+      .collab-bg-text { font-size:12vw; top:9px;}
+      .collab-main h2 { font-size: 1.5rem;}
+      .collab-row { flex-direction: column; align-items:center; margin: 0 7vw 18px 7vw; font-size:1rem; gap:0.8rem;}
+      .collab-links, .collab-contact { text-align: center; }
     }
 
     footer {
-      background: #d0021b;
-      text-align: center;
-      padding: 1.1rem 0;
-      color: #fff;
-      font-weight: 700;
-      letter-spacing: 0.04em;
-      margin-top: 3.9rem;
+      background:#d0021b;text-align:center;padding:1rem 0;color:#fff;font-weight:700;letter-spacing:.03em;margin-top:0;
+      font-size:1.02rem;
     }
   </style>
 </head>
@@ -275,6 +257,7 @@
   </nav>
 </header>
 <main>
+
   <div class="dashboard-row">
     <section id="welcome" tabindex="0" class="dashboard-panel welcome">
       <h1>Hello, I'm Anwar MD</h1>
@@ -343,16 +326,26 @@
     </div>
   </section>
 
-  <section id="contact" tabindex="0" class="dashboard-panel">
-    <h2>Let's Work Together</h2>
-    <p>Email: <a href="mailto:anwarmahammad@hotmail.com">anwarmahammad@hotmail.com</a> | Phone: <a href="tel:+919440672016">+91 94406 72016</a></p>
-    <div class="social-links">
-      <a href="https://linkedin.com/in/ianvrr" aria-label="LinkedIn" target="_blank" rel="noopener"><svg width="36" height="36" fill="#d0021b" viewBox="0 0 24 24"><path d="M21 0h-18c-1.657 0-3 1.343-3 3v18c0 1.657 1.343 3 3 3h18c1.657 0 3-1.343 3-3v-18c0-1.657-1.343-3-3-3zm-12 20h-3v-10h3v10zm-1.5-11.268c-.965 0-1.75-.784-1.75-1.75s.785-1.75 1.75-1.75c.965 0 1.75.784 1.75 1.75s-.785 1.75-1.75 1.75zm13.5 11.268h-3v-5.604c0-1.336-.471-2.25-1.662-2.25-1.03 0-1.662.786-1.662 2.25v5.604h-3v-10h3v1.428c.522-.728 1.577-1.428 2.496-1.428 2.255 0 3.583 1.704 3.583 4.615v5.385z"></path></svg></a>
-      <a href="https://github.com/ianvrr" aria-label="GitHub" target="_blank" rel="noopener"><svg width="36" height="36" fill="#d0021b" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12 0 5.303 3.438 9.8 8.207 11.385.599.111.82-.26.82-.577 0-.284-.01-1.04-.015-2.042-3.338.724-4.042-1.61-4.042-1.61-1.01-2.611-1.62-3.188-1.62-3.188-1.33-.916.103-.897.103-.897 1.47.103 2.247 1.5 2.247 1.5 1.22 2.06 3.2 1.466 3.978 1.12.123-.866.48-1.466.873-1.804-2.664-.3-5.464-1.33-5.464-5.931 0-1.31.47-2.38 1.234-3.22-.124-.302-.536-1.513.117-3.158 0 0 1.01-.322 3.303 1.236 1.01-.283 2.1-.42 3.18-.414 1.078.006 2.16.143 3.178.42 2.29-1.56 3.298-1.237 3.298-1.237.654 1.655.24 2.87.117 3.156.767.84 1.234 1.907 1.234 3.22 0 4.602-2.802 5.62-5.472 5.92.48.416.91 1.237.91 2.497 0 1.806-.018 3.263-.018 3.703 0 .32.217.694.823.57C20.565 21.793 24 17.297 24 12c0-6.627-5.373-12-12-12z"></path></svg></a>
-      <a href="https://hackerrank.com/ianvrr" aria-label="Hackerrank" target="_blank" rel="noopener"><svg width="36" height="36" fill="#d0021b" viewBox="0 0 24 24"><path d="M20.584 17.235c-.003 0-.004 0-.006 0L13.032 21.54a.996.996 0 0 1-.99 0L4.59 17.235a.99.99 0 0 1-.495-.855V6.6a.99.99 0 0 1 .495-.854l7.451-4.607a.996.996 0 0 1 .996 0L20.59 5.75a.997.997 0 0 1 .994.006.99.99 0 0 1 .494.853v9.782a.991.991 0 0 1-.494.844zm-8.403-7.788 1.816-1.07 1.816 1.07V6.654a6.599 6.599 0 0 1 .75 1.537 2.497 2.497 0 0 1-.75 3.027v-1.546l-1.816 1.07-1.816-1.07v1.542a2.52 2.52 0 0 1-.75-3.027 7.014 7.014 0 0 1 .75-1.533zm-3.472 2.807A3.517 3.517 0 0 0 6 12a3.52 3.52 0 0 0 2.72 3.31 3.52 3.52 0 0 0 3.54-1.08v-.002A3.52 3.52 0 0 0 12 12a3.52 3.52 0 0 0-3.36-2.802z"></path></svg></a>
-      <a href="https://leetcode.com/ianvrr" aria-label="Leetcode" target="_blank" rel="noopener"><svg width="36" height="36" fill="#d0021b" viewBox="0 0 24 24"><path d="M20.367 3.558c-3.86-3.865-10.133-3.868-13.992 0s-3.866 10.132 0 13.989 10.134 3.87 13.993 0c3.858-3.867 3.86-10.16-.001-13.989zm-1.845 12.204a8.056 8.056 0 0 1-5.16 2.044v-1.99a6.06 6.06 0 0 0 3.5-1.518c.266-.255.378-.653.254-1.018a.808.808 0 0 0-.686-.55c-.172-.03-.356.02-.5.145a4.56 4.56 0 0 1-2.37.94c-2.04.208-3.928-1.172-4.38-3.265-.365-1.759.63-3.495 2.322-4.061 1.56-.512 3.37.15 4.374 1.526.106.14.245.23.4.27a.793.793 0 0 0 .63-.16c.357-.286.432-.785.18-1.173a6.053 6.053 0 0 0-3.66-2.11v-2.15a8.067 8.067 0 0 1 7.09 7.09c0 1.444-.34 2.792-.97 4.005z"></path></svg></a>
+  <!-- Modern "Work Together" Collab Section -->
+  <section class="collab-section" id="contact">
+    <div class="collab-bg-text">Work together?</div>
+    <div class="collab-main">
+      <h2>Write an email</h2>
+      <hr>
+    </div>
+    <div class="collab-row">
+      <div class="collab-links">
+        <a href="https://linkedin.com/in/ianvrr" target="_blank">LinkedIn</a>
+        <a href="https://github.com/ianvrr" target="_blank">GitHub</a>
+        <a href="https://hackerrank.com/ianvrr" target="_blank">Hackerrank</a>
+        <a href="https://leetcode.com/ianvrr" target="_blank">Leetcode</a>
+      </div>
+      <div class="collab-contact">
+        <a href="mailto:anwarmahammad@hotmail.com">anwarmahammad@hotmail.com</a>
+      </div>
     </div>
   </section>
+
 </main>
 <footer>
   &copy; 2025 Anwar MD. All rights reserved.
@@ -398,7 +391,7 @@
         datasets:[{
           label:'Skill Level %',
           data: [90,85,80,75,70,65,80,70,85,80,70,60,70,65,75],
-          backgroundColor: 'rgba(208,2,27,0.16)',
+          backgroundColor: 'rgba(208,2,27,0.14)',
           borderColor: '#d0021b',
           borderWidth: 2,
           pointBackgroundColor: '#b3000a',
@@ -412,7 +405,7 @@
           r:{
             angleLines: {color: '#d0021b34'},
             grid: {color: '#d0021b22'},
-            pointLabels: {color: '#d0021b', font: {size:14}},
+            pointLabels: {color: '#d0021b', font: {size:13}},
             min:0,
             max:100,
             ticks: {stepSize:20, color:'#d0021b', showLabelBackdrop:false}
@@ -420,7 +413,7 @@
         },
         plugins:{
           legend:{
-            labels:{color:'#d0021b', font:{size:15, weight:'bold'}}
+            labels:{color:'#d0021b', font:{size:14, weight:'bold'}}
           }
         },
         responsive:true,
