--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Anwar MD | Analytics Consultant Portfolio</title>
+  <title>Anwar MD | Analytics Consultant</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Inter:wght@400;700;900&display=swap" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
@@ -13,6 +13,7 @@
       --accent-red: #E84855;
       --text-dark: #424B54;
       --timeline-line: #424B54;
+      --white: #FDFFF7;
     }
     body {
       font-family: 'Inter', sans-serif;
@@ -144,7 +145,7 @@
       font-size: 1.13rem;
       line-height: 1.68;
       font-family: 'Inter', sans-serif;
-      margin-top:0.4rem;
+      margin-top: 0.4rem;
     }
     .about-quote {
       font-weight: 700;
@@ -153,7 +154,6 @@
       margin-bottom: 0.7rem;
       font-family: 'Montserrat', sans-serif;
     }
-    /* Experience Section */
     .timeline-flexbar {
       display: flex;
       align-items: flex-end;
@@ -181,7 +181,7 @@
       text-align: left;
       color: var(--text-dark);
       font-family: 'Inter', sans-serif;
-      font-size:1rem;
+      font-size: 1rem;
     }
     .timeline-role {
       font-size: 1.05em;
@@ -189,7 +189,7 @@
       margin-bottom: 0.09em;
       color: var(--accent-red);
       font-family: 'Montserrat', sans-serif;
-      letter-spacing:.01em;
+      letter-spacing: .01em;
     }
     .timeline-desc {
       font-size: .97em;
@@ -213,7 +213,7 @@
       color: var(--text-dark);
       font-weight: 700;
       margin-top: 10px;
-      letter-spacing:0.01em;
+      letter-spacing: 0.01em;
       font-family: 'Montserrat', sans-serif;
     }
     .timeline-separator {
@@ -229,7 +229,7 @@
       .timeline-flexbar {
         flex-direction: column;
         align-items: flex-start;
-        gap:0.4rem;
+        gap: 0.4rem;
       }
       .timeline-separator {
         width: 7px;
@@ -245,7 +245,6 @@
         max-width: 99vw;
       }
     }
-    /* Skills Radar */
     .skills-panel {
       background: var(--bg-card);
     }
@@ -260,7 +259,6 @@
       width: 100% !important;
       height: 290px !important;
     }
-    /* Projects Grid */
     .projects-grid {
       display: flex;
       gap: 1.1rem;
@@ -307,56 +305,93 @@
       text-decoration: underline;
       font-weight: 700;
       font-family: 'Inter', sans-serif;
+      transition: color 0.2s;
     }
     .project-card a:hover { color: var(--timeline-line);}
-    /* Footer Section */
     footer {
       background: var(--timeline-line);
       text-align: center;
-      padding: 2.2rem 1.5rem 3rem 1.5rem;
-      color: #FDFFF7;
+      padding: 2.3rem 1.5rem 2.7rem 1.5rem;
+      color: var(--white);
       font-size: 1.13rem;
       font-weight: 700;
       font-family: 'Montserrat', sans-serif;
-      margin-top: 4rem;
+      margin-top: 5rem;
       border-top: 3px solid var(--accent-red);
-      letter-spacing: 0.05em;
+      letter-spacing: 0.04em;
     }
     .footer-cta {
-      font-size: 2.08rem;
+      font-size: 2.07rem;
       font-weight: 900;
-      margin-bottom: 1.1rem;
-      color: var(--accent-red);
+      margin-bottom: 1.16rem;
+      color: var(--white);
+      letter-spacing: 0.01em;
     }
-    .footer-links {
-      margin-bottom: 1rem;
+    .footer-contact {
+      font-size: 1.18rem;
+      font-weight: 700;
+      margin-bottom: 1.25rem;
       display: flex;
       justify-content: center;
-      gap: 2.3rem;
+      gap: 1.2rem;
+      flex-wrap: wrap;
+      align-items: center;
+    }
+    .footer-email {
+      color: var(--white);
+      background: #616b7a;
+      padding: 0.13em 0.69em;
+      border-radius: 10px;
+      font-weight: 900;
+      font-family:'Inter',sans-serif;
+      font-size:1.06em;
+      letter-spacing:.04em;
+      text-decoration: none;
+      transition: background 0.18s, color 0.18s;
+      box-shadow:0 2px 12px #252B35;
+      border:2px solid transparent;
+    }
+    .footer-email:hover {
+      background: var(--accent-red);
+      color: var(--white);
+      border:2px solid var(--white);
+    }
+    .footer-phone {
+      color: var(--white);
+      font-weight: 900;
+      font-family: 'Inter', sans-serif;
+      font-size:1.10em;
+      letter-spacing: .03em;
+    }
+    .footer-links {
+      margin-bottom: 0.95rem;
+      display: flex;
+      justify-content: center;
+      gap: 2.2rem;
       flex-wrap: wrap;
     }
-    .footer-links a {
-      color: var(--accent-red);
+    .footer-link {
+      color: var(--white);
       text-decoration: none;
-      font-weight: 700;
-      font-family: 'Inter', sans-serif;
-      transition: color 0.2s;
+      font-weight: 800;
+      font-family: 'Montserrat', sans-serif;
+      transition: color 0.2s, border-bottom 0.2s;
+      letter-spacing:.01em;
+      font-size:1.13rem;
+      border-bottom:2px solid transparent;
+      padding-bottom:0.1em;
     }
-    .footer-links a:hover { color: #FDFFF7;}
-    .footer-contact {
-      font-size:1.08rem;
-      font-weight:700;
-      margin-bottom:1.12rem;
-      color: #FDFFF7;
-      font-family: 'Inter', sans-serif;
-      user-select: text;
+    .footer-link:hover {
+      color: var(--accent-red);
+      border-bottom:2px solid var(--accent-red);
     }
     .footer-copy {
-      font-size: .96rem;
+      font-size: .98rem;
       font-weight: 700;
-      opacity: 0.41;
+      opacity: 0.44;
       font-family: 'Inter', sans-serif;
       letter-spacing: 0.02em;
+      margin-top: .55em;
     }
   </style>
 </head>
@@ -388,9 +423,7 @@
   </section>
   <section id="skills" tabindex="0" class="section-panel skills-panel">
     <h3>Technical Skills</h3>
-    <div class="skills-chart-wrapper">
-      <canvas id="skillsRadar"></canvas>
-    </div>
+    <div class="skills-chart-wrapper"><canvas id="skillsRadar"></canvas></div>
   </section>
   <section id="experience" tabindex="0" class="section-panel">
     <h3>Experience</h3>
@@ -435,14 +468,14 @@
 <footer id="contact">
   <div class="footer-cta">Let’s Work Together</div>
   <div class="footer-contact">
-    <a href="mailto:anwarmahammadad@gmail.com">anwarmahammadad@gmail.com</a>
-    <span>9144027606</span>
+    <a href="mailto:anwarmahammadad@hotmail.com" class="footer-email">anwarmahammadad@hotmail.com</a>
+    <span class="footer-phone">9440672016</span>
   </div>
   <div class="footer-links">
-    <a href="https://linkedin.com/in/ianvrr" target="_blank">LinkedIn</a>
-    <a href="https://github.com/ianvrr" target="_blank">GitHub</a>
-    <a href="https://hackerrank.com/ianvrr" target="_blank">Hackerrank</a>
-    <a href="https://leetcode.com/ianvrr" target="_blank">Leetcode</a>
+    <a href="https://linkedin.com/in/ianvrr" target="_blank" class="footer-link">LinkedIn</a>
+    <a href="https://github.com/ianvrr" target="_blank" class="footer-link">GitHub</a>
+    <a href="https://hackerrank.com/ianvrr" target="_blank" class="footer-link">Hackerrank</a>
+    <a href="https://leetcode.com/ianvrr" target="_blank" class="footer-link">Leetcode</a>
   </div>
   <div class="footer-copy">&copy; 2025 Anwar MD. All rights reserved.</div>
 </footer>
